# Hive

./: CMakeLists.txt  README.md
src/: bee.cpp  hive.cpp  queen.cpp
utils/include/: Flower.h  Flowerbed.h  defs.h
utils/src/: Flower.cpp  Flowerbed.cpp
